@@ -6,6 +6,7 @@ http://winmerge.org/tracker/[tracker-id]
 WinMerge 2.10.2
   Change download URL to current URL (#2136765)
   Installer: create backup of ClearCase config file (#2129095)
+  Release notes update (#2222871)
   BugFix: Case-sensitive regexp search didn't work (#1991259)
   BugFix: Wrong cursor position when disabling selection margin (#2138555)
   BugFix: Showed a black line when disabling selection margin (#2068790)
